[gd_scene load_steps=2 format=3 uid="uid://c8time_display"]

[ext_resource type="Script" path="res://ui/time_display/time_display.gd" id="1"]

[node name="TimeDisplay" type="Control"]
custom_minimum_size = Vector2(100, 28)
anchors_preset = 0
offset_right = 100.0
offset_bottom = 28.0
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="TimeIcon" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="PeriodLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "DAY"
horizontal_alignment = 1
vertical_alignment = 1
